fix: table collapse

--- a/apps/chrome-extension/main.css
+++ b/apps/chrome-extension/main.css
@@ -58,6 +58,8 @@ table {
   text-align: left;
   font-size: 20px;
   margin-top: 48px;
+  border-spacing: 0;
+  border-collapse: collapse;
 }
 
 th {
